--- a/07-deployment-using-cli/test_webservice.ipynb
+++ b/07-deployment-using-cli/test_webservice.ipynb
@@ -17,11 +17,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Test with ACI deployment:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -33,7 +33,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "url = 'http://****.azurecontainer.io/score'\n",
+    "url = 'http://xxxx.azurecontainer.io/score'\n",
     "\n",
     "test_data = {\n",
     "  'data': [{\n",
@@ -56,11 +56,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Test with AKS deployment:"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -103,6 +103,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.6 - AzureML",
+   "language": "python",
+   "name": "python3-azureml"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -113,17 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "Python 3.7.9 64-bit ('azureml': conda)",
-   "display_name": "Python 3.7.9 64-bit ('azureml': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "54b76a1167e0a2b6a6b8c7f2df323eb2ecfae9d2bbefe58fb0609bf9141d6860"
-    }
-   }
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
