--- a/02-pipelines-multi-step-pipeline/multi_step_pipeline.ipynb
+++ b/02-pipelines-multi-step-pipeline/multi_step_pipeline.ipynb
@@ -128,7 +128,7 @@
     "prepare_step = PythonScriptStep(name=\"prepare-step\",\n",
     "                        runconfig=prepare_runconfig,\n",
     "                        source_directory=\"./\",\n",
-    "                        script_name=prepare_runconfig.script,\n",
+    "                        script_name=prepare_runconfig.script, # get the script file path from prepare_runconfig\n",
     "                        arguments=['--data-input-path', training_dataset_consumption,\n",
     "                                   '--data-output-path', prepared_data],\n",
     "                        inputs=[training_dataset_consumption],\n",
