--- a/04-pipelines-hyperdrive-step/hyperdrive_pipeline.ipynb
+++ b/04-pipelines-hyperdrive-step/hyperdrive_pipeline.ipynb
@@ -124,7 +124,7 @@
     "# counts as one interval.\n",
     "early_termination_policy = BanditPolicy(evaluation_interval=2, slack_factor=0.1)\n",
     "\n",
-    "hd_config = HyperDriveConfig(run_config=script_run_config, # <-- it contains the reference to the training script\n",
+    "hd_config = HyperDriveConfig(run_config=script_run_config, # It contains the reference to the training script\n",
     "                             hyperparameter_sampling=ps,\n",
     "                             policy=early_termination_policy,\n",
     "                             primary_metric_name='Test accuracy', \n",
