--- a/07-deployment-using-cli/test_webservice.ipynb
+++ b/07-deployment-using-cli/test_webservice.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "url = 'http://xxxx.azurecontainer.io/score'\n",
+    "url = 'http://xxx.xxx.azurecontainer.io/score'\n",
     "\n",
     "test_data = {\n",
     "  'data': [{\n",
@@ -70,8 +70,8 @@
    "source": [
     "import requests\n",
     "\n",
-    "url = 'http://*****/api/v1/service/credit-model-aks/score'\n",
-    "key = 'paste key here'\n",
+    "url = 'http://xxx/score'\n",
+    "key = 'xxx'\n",
     "\n",
     "test_data = {\n",
     "  'data': [{\n",
